--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2127,7 +2127,7 @@
 }
 .course-item img {
   /* max-width: 100%; */
-  height: 18rem;
+  height: 15rem;
   width:100%;
   object-fit: fill;  
   border-top-left-radius: 8px;
@@ -2135,15 +2135,15 @@
 }
 .course-item #tribe-img{
     object-fit: fill;
-    height: 18rem;
+    height: 15rem;
     aspect-ratio: 3;
 }
 .course-content {
   padding: 20px;
 }
 .course-content .category {
-  height: 8rem;
-  font-size: 22px;
+  height: 5rem;
+  font-size: 1rem;
   font-weight: 600;
   color: #000000;
 }
